feature: create new bus entry
