# docs/swagger.json
@@ -1,14 +1,48 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample swagger for Fiber",
-        "title": "Fiber Example API",
+        "description": "API definition for bikun tracking specification",
+        "title": "Bikun Tracking API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
+        "/bus/": {
+            "post": {
+                "description": "Put all mandatory parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Create new bus entry",
+                "parameters": [
+                    {
+                        "description": "CreateBus",
+                        "name": "CreateBusDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateBusDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateBusResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/healthcheck": {
             "get": {
                 "description": "Put all mandatory parameter",
@@ -19,9 +53,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "healthcheck"
+                    "Healthcheck"
                 ],
-                "summary": "Featured Accommodations Card",
+                "summary": "Check system status",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -37,6 +71,63 @@
         }
     },
     "definitions": {
+        "dto.CreateBusDto": {
+            "type": "object",
+            "required": [
+                "number",
+                "password",
+                "plate",
+                "route",
+                "username"
+            ],
+            "properties": {
+                "number": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "plate": {
+                    "type": "string"
+                },
+                "route": {
+                    "type": "string",
+                    "enum": [
+                        "RED",
+                        "BLUE"
+                    ]
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CreateBusResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "plate": {
+                    "type": "string"
+                },
+                "route": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.Status": {
             "type": "object",
             "properties": {
